--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Projek UAS</title>
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore fuga voluptatem rem. Deleniti vitae beatae perspiciatis nesciunt. 
+        Vitae incidunt rerum inventore animi magnam enim libero reiciendis accusamus odio. Adipisci, voluptate!
+    </p>
 </body>
 </html>
