Menambahkan Heading juddul dan paragraf singkat

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projek UAS</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore fuga voluptatem rem. Deleniti vitae beatae perspiciatis nesciunt. 
-        Vitae incidunt rerum inventore animi magnam enim libero reiciendis accusamus odio. Adipisci, voluptate!
-    </p>
+    <div class="kotakAtas">
+        <h1>Welcome To <br> CA '24 <br> Website</h1>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam consectetur iure atque aspernatur fugit, cupiditate delectus? Ea autem tempora iusto cum enim. Fugit nostrum corporis tenetur eligendi cupiditate omnis! Recusandae.</p>
 </body>
 </html>
