--- a/index.html
+++ b/index.html
@@ -1,11 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
     <title>Projek UAS</title>
-    
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <!--NAVBAR-->
+    <nav
+      class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top"
+      data-bs-theme="dark"
+    >
+      <div class="container-fluid">
+        <!--NAVBAR BRAND (LOGO)-->
+        <a class="navbar-brand border-body border-bottom" href="#"
+          ><img src="/CA'24.png" alt="Logo CA" width="90" height="30"
+        /></a>
+
+        <!--HAMBURGER NAVBAR-->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!--ISI NAVMENU-->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item text-white">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item text-white">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">ClassCrew</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Classmates</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <br />
+    <p class="pt-5 px-5">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+      architecto inventore consectetur ex deserunt aspernatur ullam eveniet
+      nihil expedita eum sequi, est incidunt perferendis molestiae esse facere
+      similique quasi velit. Ea, quas repellendus ipsa amet eligendi doloribus
+      placeat nesciunt eius. Officia iure commodi voluptatibus quis sapiente
+      dicta placeat at recusandae dolor, est deleniti molestias laboriosam ea
+      error pariatur voluptatem ipsum? Dolorum ipsa odit numquam distinctio
+      exercitationem pariatur dignissimos, vitae quaerat repellat tenetur?
+      Provident voluptatem ratione iste, fugiat autem rem distinctio itaque
+      culpa odit sequi aliquam quasi rerum optio cumque iure? Officia
+      consequatur non perspiciatis aliquam voluptates nemo maxime quibusdam at?
+      Vel a voluptate placeat esse adipisci aperiam expedita exercitationem,
+      quae autem sit iure delectus, debitis, dolore nam laboriosam dolores
+      itaque. Tenetur voluptates facere aspernatur! Eius voluptatum maiores sint
+      possimus asperiores repellendus nisi ut! Molestias laudantium beatae quis
+      iusto eveniet vitae, tenetur explicabo praesentium deserunt quaerat
+      fugiat, tempore odit accusantium dolores! Ea temporibus harum maiores
+      ullam dignissimos, nihil libero aspernatur odit dolores praesentium
+      aliquid ut earum nemo voluptatum fugiat atque rem fuga sequi nulla illo
+      maxime incidunt doloribus ipsam. Dignissimos, sequi? Ea quas cupiditate
+      aspernatur obcaecati, delectus accusamus amet quos. Distinctio porro
+      inventore exercitationem libero, ut illo quis itaque alias consequuntur
+      quas voluptate magni? Voluptate officia quam reprehenderit rerum vitae
+      consequatur. Laborum, sit animi. Reiciendis quaerat facere dolor veritatis
+      temporibus asperiores repudiandae! Cumque dicta possimus saepe illo error
+      praesentium, tempore rerum ullam quas sunt aspernatur nam repellendus,
+      accusantium tenetur expedita repellat. Assumenda voluptate unde et aliquid
+      voluptatum esse sunt cum deleniti? Sed, dicta? Odit reprehenderit ad
+      repudiandae delectus, nihil tenetur vero neque placeat assumenda libero
+      dolores ullam soluta repellendus quo? Assumenda. Neque tenetur veniam
+      cumque minima, possimus corporis eaque consequatur soluta expedita?
+      Explicabo veritatis molestias consectetur quam sapiente, recusandae
+      expedita cum nesciunt ipsam doloremque odio ipsa nihil libero saepe
+      delectus magni! Quam nulla, tenetur hic beatae esse pariatur error quos,
+      est, exercitationem repudiandae quod mollitia consequuntur. Quae,
+      temporibus, unde deleniti, nulla perferendis placeat expedita eveniet
+      necessitatibus iusto illum quasi eos reiciendis? Tenetur nulla eligendi
+      porro quod incidunt sit aliquid hic iusto eveniet omnis ex aspernatur
+      adipisci, nemo ab asperiores reiciendis nisi sapiente magni accusantium
+      dolorem officiis iste vero temporibus. Quidem, ex. Voluptatem placeat
+      reiciendis odio laudantium nemo a ratione, ipsam sapiente non asperiores
+      assumenda quos ipsum quisquam necessitatibus facilis quidem fuga magnam?
+      Temporibus, numquam error magnam a consequatur perferendis eum voluptas?
+      Veniam velit natus neque voluptate dignissimos odit nisi tenetur error
+      minus qui, sequi ab assumenda eligendi ipsam modi exercitationem cum illo
+      sit maiores praesentium accusamus. Molestias iste minus praesentium odio.
+      Dignissimos quas fugit expedita exercitationem asperiores ullam aliquid
+      sed animi corrupti libero, excepturi porro optio dolores, consectetur
+      doloremque nam quibusdam a commodi ipsam voluptas totam ut nostrum enim
+      maxime! Laboriosam! Distinctio quibusdam eos labore libero accusantium
+      dolor id, sit dicta placeat tempora quos repellat, qui beatae sapiente
+      eveniet optio voluptatem, ipsa unde molestiae. Eius ad dolores voluptatem
+      labore recusandae omnis? Maxime vero quod repellat doloremque a voluptatem
+      earum pariatur odio, eligendi facilis eum necessitatibus cumque recusandae
+      iure aspernatur quidem! Mollitia suscipit atque ut accusantium,
+      repellendus porro debitis dolorum quo omnis. Reiciendis, consectetur
+      perspiciatis ab reprehenderit perferendis, fuga ad sequi atque cupiditate
+      provident, nesciunt molestias tempora unde obcaecati ratione eos soluta
+      magni quibusdam quas praesentium incidunt eligendi qui illum. Labore,
+      natus! Debitis quod illum aspernatur voluptas, expedita aliquam amet
+      blanditiis. Asperiores amet, eum rerum recusandae voluptas, voluptatum
+      fugiat minus quibusdam aliquid, corrupti nihil? Quisquam tenetur sed
+      aspernatur obcaecati eligendi nam quidem! Eius rerum tenetur optio ut?
+      Fugit accusamus harum a dolorem, optio perspiciatis suscipit quibusdam
+      beatae iure obcaecati neque, accusantium quasi quaerat, odio cupiditate
+      nihil illum minima sapiente rem recusandae alias? Facilis velit veniam
+      porro ipsum dolore! Accusamus itaque consequatur, ea ducimus autem beatae
+      asperiores impedit sed voluptatum distinctio suscipit dolores excepturi,
+      dicta deserunt eius similique? Neque blanditiis suscipit commodi maiores!
+      Nam ullam eveniet numquam. Sunt, libero. Iste provident maiores ipsam
+      quaerat tenetur maxime molestiae, hic earum! Ipsum inventore dolores unde
+      sit amet tenetur pariatur, quia illo, eaque cum optio ut. Minima sunt
+      debitis at, consequatur quos facere iusto aperiam quo est autem soluta
+      accusantium voluptatibus facilis inventore amet adipisci exercitationem
+      laboriosam labore voluptatem hic beatae. Consequuntur ipsa hic eligendi
+      consectetur. Pariatur ad consectetur aspernatur facilis laudantium alias,
+      natus possimus ratione quam ea voluptatibus a autem tempore quis
+      praesentium obcaecati, esse, aperiam sint voluptate nihil. Illum totam ea
+      rem ratione qui? Officiis animi in esse assumenda quidem. Aliquid,
+      delectus aliquam quo, amet deleniti vero magnam blanditiis temporibus
+      facilis asperiores cumque? Velit doloribus ut rem autem voluptates quo vel
+      alias corrupti? Aliquid? Veritatis hic, voluptas incidunt accusantium
+      asperiores dolorum tenetur temporibus expedita dignissimos deleniti
+      voluptatibus dolores corporis optio ab minus accusamus nostrum suscipit
+      ipsum? Nemo hic porro sapiente blanditiis aliquid, fuga doloremque! Nam
+      iste repudiandae quia inventore nobis, perspiciatis eum, ratione esse
+      doloremque, molestias tenetur odit culpa totam illum id. At quos corporis
+      aliquid ratione eveniet ipsa aut iusto repudiandae. Sunt, tempora. Sunt
+      saepe velit quia dolore magni, quisquam eius non doloribus voluptatem
+      voluptas omnis voluptates? Recusandae iure suscipit culpa provident!
+      Facere quas ducimus natus quasi nobis nemo aspernatur reiciendis dolor
+      ipsam. Dolorum ipsum nobis quod sapiente placeat culpa labore cupiditate
+      vero sint? Impedit quidem corrupti rem, repudiandae debitis quos molestiae
+      inventore doloremque exercitationem adipisci, maxime eveniet excepturi
+      alias reprehenderit ex quam. Totam, ut nulla inventore saepe at maxime
+      cupiditate atque perferendis explicabo eaque quae, nam tempore ab. Quam
+      quibusdam quos a culpa ducimus deleniti, iste tempora doloribus tenetur
+      repellendus aliquam veritatis. Recusandae, eos modi. Quisquam quasi ad quo
+      saepe reiciendis cupiditate eius facilis provident vero commodi sint illo
+      dicta omnis quaerat magnam dignissimos libero, dolores laboriosam harum
+      deleniti nesciunt ratione alias. Vero vitae quasi voluptatum fugit autem,
+      facere in consequuntur perferendis laudantium optio sit et? Accusamus,
+      quod eaque ab porro repellendus possimus dignissimos aperiam ad, dolore
+      similique expedita eos tempore natus? Modi, obcaecati aperiam. Alias,
+      cupiditate enim aliquid sunt maxime quia, sequi sint inventore, possimus
+      ut quasi eveniet neque. Reiciendis deleniti impedit repellendus voluptas
+      porro natus optio quos praesentium aliquam sed. Mollitia nemo distinctio
+      dolores obcaecati fugit rem harum, repellendus a ullam sit eligendi
+      libero, iste totam. Alias adipisci maxime saepe. Consequatur porro minus
+      nam accusamus? Veritatis ea ullam qui quidem. Libero consequatur, quae
+      laborum commodi recusandae eos, aut similique quaerat est voluptatem fuga
+      non sit vero quidem vitae. Labore nobis magni pariatur corrupti distinctio
+      ad accusamus saepe maiores esse rerum. Recusandae natus fuga distinctio
+      consequatur ratione odio sit porro in libero, molestiae atque id vitae aut
+      asperiores, facilis vero mollitia harum ab eos, minima et! Id fugiat quas
+      omnis obcaecati. Explicabo aspernatur sit dicta ipsam a. Rem at eius
+      inventore nesciunt. Exercitationem repudiandae cupiditate quo veniam,
+      nostrum, dignissimos, odit suscipit repellendus itaque molestias quam
+      velit recusandae! Quod illo vel modi! Dolorum suscipit, est omnis eligendi
+      eos necessitatibus similique nam amet non obcaecati quos aliquam fugit
+      mollitia reprehenderit dolor porro! Vitae suscipit quo mollitia similique
+      quas odio dicta. Dolore, esse cupiditate? Officiis esse doloremque libero
+      enim delectus officia ratione adipisci mollitia eius? Iure doloribus
+      distinctio veniam aliquam autem maiores tempore sapiente incidunt labore
+      enim voluptas animi, neque at fugit accusantium veritatis! Ut qui
+      explicabo hic nulla iure corporis cum at suscipit ab, laborum saepe sit ea
+      quasi asperiores debitis libero ullam distinctio! Explicabo placeat
+      quibusdam esse corrupti rerum ab nam voluptatum! Ea facere quod libero at
+      tempora dolorum odit maiores mollitia aperiam dolor? Asperiores odit
+      doloribus illo pariatur facere quisquam consectetur fuga, quis, sint
+      veniam autem, mollitia quos quae a deleniti? Quisquam labore laudantium
+      quod sequi. Excepturi autem aut deserunt, hic doloribus reprehenderit
+      accusamus atque esse eveniet, nostrum iure numquam amet sint tenetur
+      similique earum maxime, exercitationem sapiente praesentium neque quae.
+      Maiores inventore nemo quidem ea totam quis quos, ratione voluptatem
+      ducimus debitis tempore corrupti assumenda dolore impedit asperiores
+      mollitia? Eaque enim recusandae ea doloribus, nisi perspiciatis mollitia
+      itaque harum consequuntur. Fugit cum dolores placeat rerum sunt eligendi
+      ut quos, doloribus corporis sapiente beatae est et exercitationem,
+      voluptas architecto? Fuga quisquam odit facilis illum, debitis magni
+      delectus beatae optio iusto rem? Atque at qui ipsum possimus deleniti
+      explicabo voluptates quis, id repudiandae a sequi blanditiis nisi sunt
+      dolore neque animi eaque facilis non cum! Ad quae aspernatur temporibus,
+      sit possimus dolores. Magnam possimus tenetur, expedita alias
+      necessitatibus esse excepturi. Reprehenderit sunt asperiores, deserunt
+      aspernatur adipisci cumque quae ea dolorum incidunt veniam ipsum pariatur
+      modi enim temporibus voluptate natus qui sit dicta? Asperiores veniam
+      quaerat molestias hic voluptas repellendus rerum aliquam eligendi, non
+      doloremque quam consectetur debitis ipsa praesentium illo dignissimos
+      odit, nemo alias aliquid eum! Beatae rerum aliquid rem debitis omnis. Quos
+      vel praesentium omnis dicta, alias id sapiente harum architecto quidem
+      perferendis non reiciendis cum dolore suscipit, assumenda ab impedit?
+      Dicta deleniti reprehenderit ratione molestiae corporis repellendus
+      voluptatem necessitatibus ex. Assumenda distinctio animi incidunt quia at
+      quisquam, rerum ipsa? Ipsum nemo neque perferendis ad dolores numquam
+      illum, placeat rerum. Voluptas aliquid aliquam eos at perspiciatis
+      architecto quis exercitationem enim cum? Sapiente, nisi porro temporibus
+      tenetur iure atque totam, quos exercitationem repudiandae explicabo
+      voluptate magnam adipisci optio. Asperiores, odit dignissimos? Consectetur
+      magni aliquam officia atque ut, placeat voluptates sapiente nostrum
+      cupiditate.
+    </p>
+
+    <!--SCRIPT BOOTSTRAP-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
