--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container-fluid">
         <!--NAVBAR BRAND (LOGO)-->
         <a class="navbar-brand border-body border-bottom" href="#"
-          ><img src="/CA'24.png" alt="Logo CA" width="90" height="30"
+          ><img src="/img/CA'24.png" alt="Logo CA" width="90" height="30"
         /></a>
 
         <!--HAMBURGER NAVBAR-->
