Benerin link about

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href="#" class="nav-link">Home</a>
             </li>
             <li class="nav-item text-white">
-              <a href="#" class="nav-link">About</a>
+              <a href="#about" class="nav-link">About</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">ClassCrew</a>
@@ -66,11 +66,11 @@
       similique quasi velit. Ea, quas repellendus ipsa amet eligendi doloribus
       placeat nesciunt eius. Officia iure commodi voluptatibus quis sapiente
       dicta placeat at recusandae dolor, est deleniti molestias laboriosam ea
-      error pariatur voluptatem ipsum? 
+      error pariatur voluptatem ipsum?
     </p>
     
     <!--BAGIAN ABOUT--> 
-    <div class="container mt-4">
+    <div class="container mt-4" id="about">
       <div class="row">
          <div class="col-md-6">
             <div class="p-4 border rounded shadow bg-light">
