Nambah home sedikit -Hanif

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style.css" />
     <title>Projek UAS</title>
   </head>
   <body>
@@ -18,6 +25,7 @@
       data-bs-theme="dark"
     >
       <div class="container-fluid">
+        
         <!--NAVBAR BRAND (LOGO)-->
         <a class="navbar-brand border-body border-bottom" href="#"
           ><img src="/img/CA'24.png" alt="Logo CA" width="90" height="30"
@@ -59,7 +67,16 @@
       </div>
     </nav>
     <br />
-    <p class="pt-5 px-5">
+
+    <!-- HOME -->
+     <section class="home header">
+    <div class="pt-5 mx-2 d-flex">
+      <h1>WELCOME TO CA'24 WEBSITE</h1>
+      <img class="fotokelas img-fluid w-50 ms-auto" src="/img/1CA.JPG" alt="Foto CA Sekelas" width="300" />
+    </div>
+    </section>
+
+    <p class="pt-3 px-4">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
       architecto inventore consectetur ex deserunt aspernatur ullam eveniet
       nihil expedita eum sequi, est incidunt perferendis molestiae esse facere
@@ -68,34 +85,45 @@
       dicta placeat at recusandae dolor, est deleniti molestias laboriosam ea
       error pariatur voluptatem ipsum?
     </p>
-    
-    <!--BAGIAN ABOUT--> 
+
+    <!--BAGIAN BOX ABOUT-->
     <div class="container mt-4" id="about">
       <div class="row">
-         <div class="col-md-6">
-            <div class="p-4 border rounded shadow bg-light">
-    <p id="aboutPage">
-      Hi, there👋🏻! <br>
-      Welcome to the official website of Class CA'24, a group of 20+ students majoring in Computer Enginering at State Polytechnic of Sriwijaya.
-      <br>
-      <br>
-      We're a part of the vocation squad—hand-on learners, tech enthusiasts, coffee lovers, and deadline fighters. 
-      From coding late at night to cracing jokes in class, we do it all with energy (and snacks, of course).
-      <br>
-      <br>
-      Keep scrolling and you'll meet the unique mix of people in 2CA—some are coding wizards, some are caffeine-fueled warriors, and yes, 
-      some are frequent stars of our anonymous menfess 😆.
-      <br>
-      <br>
-      We're also active on our class Instagram, where we share our daily moments, achievements, 
-      and the behind-the-scenes of our campus life. If you're curious about our “fun side,” the menfess is the place—expect confessions, rants, 
-      and the kind of subtle shade that gets the whole class buzzing. Because in 2CA, it's not just about assignments and labs—it's also about laughter, 
-      little chaos, and the memories we'll carry for a long time.
-    </p>
+        <div class="col-md-6">
+          <div class="p-4 border rounded shadow bg-light">
+
+            <!-- BAGIAN PARAGRAF DALAM BOX -->
+            <p>
+              Hi, there👋🏻! <br />
+              Welcome to the official website of Class CA'24, a group of 20+
+              students majoring in Computer Enginering at State Polytechnic of
+              Sriwijaya.
+              <br />
+              <br />
+              We're a part of the vocation squad—hand-on learners, tech
+              enthusiasts, coffee lovers, and deadline fighters. From coding
+              late at night to cracing jokes in class, we do it all with energy
+              (and snacks, of course).
+              <br />
+              <br />
+              Keep scrolling and you'll meet the unique mix of people in
+              2CA—some are coding wizards, some are caffeine-fueled warriors,
+              and yes, some are frequent stars of our anonymous menfess 😆.
+              <br />
+              <br />
+              We're also active on our class Instagram, where we share our daily
+              moments, achievements, and the behind-the-scenes of our campus
+              life. If you're curious about our “fun side,” the menfess is the
+              place—expect confessions, rants, and the kind of subtle shade that
+              gets the whole class buzzing. Because in 2CA, it's not just about
+              assignments and labs—it's also about laughter, little chaos, and
+              the memories we'll carry for a long time.
+            </p>
           </div>
         </div>
+      </div>
     </div>
-  </div>
+
     <!--SCRIPT BOOTSTRAP-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
