Nambahi Home (Rusak)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       data-bs-theme="dark"
     >
       <div class="container-fluid">
-        
         <!--NAVBAR BRAND (LOGO)-->
         <a class="navbar-brand border-body border-bottom" href="#"
           ><img src="/img/CA'24.png" alt="Logo CA" width="90" height="30"
@@ -69,11 +68,34 @@
     <br />
 
     <!-- HOME -->
-     <section class="home header">
-    <div class="pt-5 mx-2 d-flex">
-      <h1>WELCOME TO CA'24 WEBSITE</h1>
-      <img class="fotokelas img-fluid w-50 ms-auto" src="/img/1CA.JPG" alt="Foto CA Sekelas" width="300" />
-    </div>
+    <section class="home header">
+      <div class="pt-5 mx-2 d-flex">
+        <div class="">
+          <h1>WELCOME TO CA'24 WEBSITE</h1>
+          <br>
+          <br>
+          <br>
+          <div class="">
+            <div class="fotoadmin d-flex">
+              <img class="w-50 fotokelas" src="/img/Ganteng.JPG" alt="Foto Hanif">
+              <img class="w-50 fotokelas" src="/img/Qey.JPG" alt="Foto Qeysya">
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="fotoadmin d-flex">
+              <img class="w-50 fotokelas" src="/img/Al.JPG" alt="Foto Hakim">
+              <img class="w-50 fotokelas" src="/img/Diah.JPG" alt="Foto Diah">
+            </div>
+          </div>
+        </div>
+        <img
+          class="fotokelas img-fluid w-50 ms-auto"
+          src="/img/1CA.JPG"
+          alt="Foto CA Sekelas"
+        />
+      </div>
     </section>
 
     <p class="pt-3 px-4">
@@ -91,7 +113,6 @@
       <div class="row">
         <div class="col-md-6">
           <div class="p-4 border rounded shadow bg-light">
-
             <!-- BAGIAN PARAGRAF DALAM BOX -->
             <p>
               Hi, there👋🏻! <br />
