--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">k
+    <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon">k
     <title>Projek UAS</title>
   </head>
   <body>
