--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
           <br>
           <br>
           <br>
+          <h5>designed by:</h5>
+          <br>
           <div class="">
             <div class="fotoadmin d-flex">
               <img class="w-50 fotokelas" src="/img/Ganteng.JPG" alt="Foto Hanif">
@@ -110,9 +112,9 @@
     </p>
 
     <!--BAGIAN BOX ABOUT-->
-    <div class="container mt-4" id="about">
+    <div class="container mt-3" id="about">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5">
           <div class="p-4 border rounded shadow bg-light">
             <!-- BAGIAN PARAGRAF DALAM BOX -->
             <p>
@@ -125,7 +127,7 @@
               We're a part of the vocation squad—hand-on learners, tech
               enthusiasts, coffee lovers, and deadline fighters. From coding
               late at night to cracing jokes in class, we do it all with energy
-              (and snacks, of course).
+              (and geprek, of course).
               <br />
               <br />
               Keep scrolling and you'll meet the unique mix of people in
@@ -135,7 +137,7 @@
               <br />
               We're also active on our class Instagram, where we share our daily
               moments, achievements, and the behind-the-scenes of our campus
-              life. If you're curious about our “fun side,” the menfess is the
+              life. If you're curious about our fun side, the menfess is the
               place—expect confessions, rants, and the kind of subtle shade that
               gets the whole class buzzing. Because in 2CA, it's not just about
               assignments and labs—it's also about laughter, little chaos, and
@@ -143,9 +145,29 @@
             </p>
           </div>
         </div>
+  </div>
+   
+
+    <!--BAGIAN CLASSCREW-->
+    <div class="col-md-7">
+    <div class="row g-2">
+      <div class="col-6">
+        <div class="p-3 bg-light text-center rounded">Foto1</div>
+        </div>
+        <div class="col-6">
+          <div class="p-3 bg-light text-center rounded">Foto2</div>
+        </div>
+        <div class="col-6">
+          <div class="p-3 bg-light text-center rounded">Foto3</div>
+        </div>
+        <div class="col-6">
+        <div class="p-3 bg-light text-center rounded">Foto4</div>
+        </div>
       </div>
     </div>
-
+    </div>
+    </div>
+  
     <!--SCRIPT BOOTSTRAP-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
