--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
             </p>
           </div>
         </div>
+        <div class="col-md-6">
+          <img class="img-fluid d-none d-sm-block" src="/img/1CA.JPG" alt="about">
+
+        </div>
       </div>
     </div>
 
