--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
-    <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon">k
+    <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
+    k
     <title>Projek UAS</title>
   </head>
   <body>
@@ -70,24 +71,32 @@
 
     <!-- HOME -->
     <section class="home header">
-      <div class="pt-5 mx-2 d-flex">
+      <div class="pt-5 mx-2 d-block d-sm-flex">
         <div class="">
           <h1>WELCOME TO CA'24 WEBSITE</h1>
-          <br>
-          <br>
-          <br>
+          <br />
+          <br />
+          <br />
           <div class="">
             <div class="fotoadmin d-flex">
-              <img class="w-50 fotokelas" src="/img/Ganteng.JPG" alt="Foto Hanif">
-              <img class="w-50 fotokelas" src="/img/Qey.JPG" alt="Foto Qeysya">
+              <img
+                class="w-50 fotokelas"
+                src="/img/Ganteng.JPG"
+                alt="Foto Hanif"
+              />
+              <img
+                class="w-50 fotokelas"
+                src="/img/Qey.JPG"
+                alt="Foto Qeysya"
+              />
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
+            <br />
+            <br />
+            <br />
+            <br />
             <div class="fotoadmin d-flex">
-              <img class="w-50 fotokelas" src="/img/Al.JPG" alt="Foto Hakim">
-              <img class="w-50 fotokelas" src="/img/Diah.JPG" alt="Foto Diah">
+              <img class="w-50 fotokelas" src="/img/Al.JPG" alt="Foto Hakim" />
+              <img class="w-50 fotokelas" src="/img/Diah.JPG" alt="Foto Diah" />
             </div>
           </div>
         </div>
