--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <title>Projek UAS</title>
   </head>
   <body>
+
     <!--NAVBAR-->
     <nav
       class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top"
       data-bs-theme="dark"
     >
       <div class="container-fluid">
+
         <!--NAVBAR BRAND (LOGO)-->
         <a class="navbar-brand border-body border-bottom" href="#"
           ><img src="/img/CA'24.png" alt="Logo CA" width="90" height="30"
@@ -70,6 +72,13 @@
 
     <!-- HOME -->
     <section class="pt-5" class="home header" id="home" >
+       <div class="home">
+          <h1>WELCOME TO CA'24 WEBSITE</h1>
+          <br>
+          <br>
+          <br>
+          <h5>designed by:</h5>
+        </div>
       <div class="container">
         <div class="row text-center" >
           <div class="col">
@@ -103,16 +112,13 @@
             <div class="card">
               <img src="/img/Al.JPG" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">ini di isi apa</h5>
-                  <p class="card-text">ini di isi apa</p>
+                  <h5 class="card-title">Kimbap</h5>
+                  <p class="card-text">Beban</p>
                 </div>
             </div>
           </div>
-
         </div>
-
       </div>
-      
     </section>
 
     <p class="pt-3 px-4">
@@ -161,7 +167,6 @@
         </div>
         <div class="col-md-6">
           <img class="img-fluid d-none d-sm-block" src="/img/1CA.JPG" alt="about">
-
         </div>
       </div>
     </div>
