--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- LINK CSS CDN BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
+
+    <!-- LINK GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap"
       rel="stylesheet"
     />
+
+    <!-- LINK CUSTOM CSS -->
     <link rel="stylesheet" href="/style.css" />
+
+    <!-- LINK FAVICON -->
     <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
-    k
     <title>Projek UAS</title>
   </head>
   <body>
@@ -70,12 +77,12 @@
     <br />
 
     <!-- HOME -->
-    <section class="pt-5" class="home header" id="home" >
+    <section class="pt-5" class="home header" id="home">
       <div class="container">
-        <div class="row text-center" >
+        <div class="row text-center">
           <div class="col">
-            <div class="card" >
-              <img src="/img/Ganteng.JPG" class="card-img-top" alt="...">
+            <div class="card">
+              <img src="/img/Ganteng.JPG" class="card-img-top" alt="Foto Ganteng" />
               <div class="card-body">
                 <h5 class="card-title">Hanif chann</h5>
                 <p class="card-text">Ak admin</p>
@@ -83,37 +90,34 @@
             </div>
           </div>
           <div class="col">
-            <div class="card" >
-            <img src="/img/Diah.JPG" class="card-img-top" alt="...">
+            <div class="card">
+              <img src="/img/Diah.JPG" class="card-img-top" alt="Foto Diah" />
               <div class="card-body">
                 <h5 class="card-title">Diah Pratwa</h5>
                 <p class="card-text">Admin jg</p>
               </div>
             </div>
-         </div>
+          </div>
           <div class="col">
-            <div class="card" >
-            <img src="/img/Qey.JPG" class="card-img-top" alt="...">
+            <div class="card">
+              <img src="/img/Qey.JPG" class="card-img-top" alt="Foto Qey" />
               <div class="card-body">
                 <h5 class="card-title">Nayla</h5>
                 <p class="card-text">Admin admin</p>
               </div>
-           </div>
+            </div>
           </div>
           <div class="col">
             <div class="card">
-              <img src="/img/Al.JPG" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">ini di isi apa</h5>
-                  <p class="card-text">ini di isi apa</p>
-                </div>
+              <img src="/img/Al.JPG" class="card-img-top" alt="Foto Hakim" />
+              <div class="card-body">
+                <h5 class="card-title">ini di isi apa</h5>
+                <p class="card-text">ini di isi apa</p>
+              </div>
             </div>
           </div>
-
         </div>
-
       </div>
-      
     </section>
 
     <p class="pt-3 px-4">
@@ -161,8 +165,11 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img class="img-fluid d-none d-sm-block" src="/img/1CA.JPG" alt="about">
-
+          <img
+            class="img-fluid rounded shadow d-block d-sm-flex"
+            src="/img/1CA.JPG"
+            alt="Foto Sekelas"
+          />
         </div>
       </div>
     </div>
