Benerin Utk Hosting

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
     <!-- LINK FAVICON -->
     <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
+
+    <!-- LINK REPO GITHUB -->
+    <base href="/Projek-UAS-Web/">
     <title>Projek UAS</title>
   </head>
-  <body>
+  <body class="">
     <!--NAVBAR-->
     <nav
       class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top"
@@ -35,7 +38,7 @@
     >
       <div class="container-fluid">
         <!--NAVBAR BRAND (LOGO)-->
-        <a class="navbar-brand border-body border-bottom" href="#"
+        <a class="navbar-brand border-bottom" href="#"
           ><img src="/img/CA'24.png" alt="Logo CA" width="90" height="30"
         /></a>
 
@@ -80,6 +83,9 @@
     <section class="pt-5" class="home header" id="home">
       <div class="home">
         <h1>WELCOME TO CA'24 WEBSITE</h1>
+        <p class="lead container pt-3">
+        Behold the creation of the great admins that will make you amazed. Just sit, relax, and enjoy the creation. Peace ✌️
+        </p>
         <br />
         <br />
         <br />
@@ -131,18 +137,8 @@
       </div>
     </section>
 
-    <p class="pt-3 px-4">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-      architecto inventore consectetur ex deserunt aspernatur ullam eveniet
-      nihil expedita eum sequi, est incidunt perferendis molestiae esse facere
-      similique quasi velit. Ea, quas repellendus ipsa amet eligendi doloribus
-      placeat nesciunt eius. Officia iure commodi voluptatibus quis sapiente
-      dicta placeat at recusandae dolor, est deleniti molestias laboriosam ea
-      error pariatur voluptatem ipsum?
-    </p>
-
     <!--BAGIAN BOX ABOUT-->
-    <div class="container mt-4" id="about">
+    <div class="container pt-5" id="about">
       <div class="row">
         <div class="col-md-6">
           <div class="p-4 border rounded shadow bg-light">
