Benerin Favicon Utk Hosting

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="/style.css" />
 
     <!-- LINK FAVICON -->
-    <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon" />
 
     <!-- LINK REPO GITHUB -->
     <base href="/Projek-UAS-Web/">
