Nge Comment Link Repo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
 
     <!-- LINK REPO GITHUB -->
-    <base href="/Projek-UAS-Web/">
+    <!-- <base href="/Projek-UAS-Web/"> -->
     <title>Projek UAS</title>
   </head>
   <body class="">
