--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- LINK FAVICON -->
     <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
 
+    <!-- LINK BOOSTRAP ICON -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
     <!-- LINK REPO GITHUB -->
     <!-- <base href="/Projek-UAS-Web/"> -->
     <title>Projek UAS</title>
@@ -180,6 +183,31 @@
         </div>
       </div>
     </div>
+
+    <!--FOOTER-->
+    <section class="p-5" id="Contact">
+    	<div class="container">
+    		<div class="row g-4 align-item-center">
+    			<div class="col-md">
+    				<h2>Contact Us</h2>
+    				<ul class="list-group list-group-flush" lead>
+    					<li class="list-group-item">
+    						<i class="bi bi-instagram"></i>
+    						<span class="fw-bold">Instagram</span>
+    						<br>
+    						@oneca.studio
+    					</li>
+    					<li class="list-group-item">
+    						<i class="bi bi-chat-right-text"></i>
+    						<span class="fw-bold">Menfes</span>
+    						<br>
+    						<a href="menfes">Send us a Message</a>
+    					</li>
+    				</ul>
+    			</div>
+    		</div>
+    	</div>
+    </section>
 
     <!--SCRIPT BOOTSTRAP-->
     <script
