--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <link rel="shortcut icon" href="/img/Favicon.ico" type="image/x-icon" />
 
     <!-- LINK BOOSTRAP ICON -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
 
     <!-- LINK REPO GITHUB -->
     <!-- <base href="/Projek-UAS-Web/"> -->
@@ -87,7 +90,8 @@
       <div class="home">
         <h1>WELCOME TO CA'24 WEBSITE</h1>
         <p class="lead container pt-3">
-        Behold the creation of the great admins that will make you amazed. Just sit, relax, and enjoy the creation. Peace ✌️
+          Behold the creation of the great admins that will make you amazed.
+          Just sit, relax, and enjoy the creation. Peace ✌️
         </p>
         <br />
         <br />
@@ -95,7 +99,7 @@
         <h5>designed by:</h5>
       </div>
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center d-block d-sm-flex">
           <div class="col">
             <div class="card">
               <img
@@ -109,6 +113,7 @@
               </div>
             </div>
           </div>
+          <br />
           <div class="col">
             <div class="card">
               <img src="/img/Diah.JPG" class="card-img-top" alt="Foto Diah" />
@@ -118,6 +123,7 @@
               </div>
             </div>
           </div>
+          <br />
           <div class="col">
             <div class="card">
               <img src="/img/Qey.JPG" class="card-img-top" alt="Foto Qey" />
@@ -127,6 +133,7 @@
               </div>
             </div>
           </div>
+          <br />
           <div class="col">
             <div class="card">
               <img src="/img/Al.JPG" class="card-img-top" alt="Foto Hakim" />
@@ -186,27 +193,27 @@
 
     <!--FOOTER-->
     <section class="p-5" id="Contact">
-    	<div class="container">
-    		<div class="row g-4 align-item-center">
-    			<div class="col-md">
-    				<h2>Contact Us</h2>
-    				<ul class="list-group list-group-flush" lead>
-    					<li class="list-group-item">
-    						<i class="bi bi-instagram"></i>
-    						<span class="fw-bold">Instagram</span>
-    						<br>
-    						@oneca.studio
-    					</li>
-    					<li class="list-group-item">
-    						<i class="bi bi-chat-right-text"></i>
-    						<span class="fw-bold">Menfes</span>
-    						<br>
-    						<a href="menfes">Send us a Message</a>
-    					</li>
-    				</ul>
-    			</div>
-    		</div>
-    	</div>
+      <div class="container">
+        <div class="row g-4 align-item-center">
+          <div class="col-md">
+            <h2>Contact Us</h2>
+            <ul class="list-group list-group-flush" lead>
+              <li class="list-group-item">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                @oneca.studio
+              </li>
+              <li class="list-group-item">
+                <i class="bi bi-chat-right-text"></i>
+                <span class="fw-bold">Menfes</span>
+                <br />
+                <a href="menfes">Send us a Message</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--SCRIPT BOOTSTRAP-->
