Nambahi Link IG

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <br />
 
     <!-- HOME -->
-    <section class="pt-5" class="home header" id="home">
+    <section class="pt-5 container" class="home header" id="home">
       <div class="home">
         <h1>WELCOME TO CA'24 WEBSITE</h1>
         <p class="lead container pt-3">
@@ -202,7 +202,10 @@
                 <i class="bi bi-instagram"></i>
                 <span class="fw-bold">Instagram</span>
                 <br />
-                @oneca.studio
+                <a
+                  href="https://www.instagram.com/oneca.studio?igsh=MTlxa3p4bGFwMmU5Ng=="
+                  >@oneca.studio</a
+                >
               </li>
               <li class="list-group-item">
                 <i class="bi bi-chat-right-text"></i>
