--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               We're a part of the vocation squad—hand-on learners, tech
               enthusiasts, coffee lovers, and deadline fighters. From coding
               late at night to cracing jokes in class, we do it all with energy
-              (and snacks, of course).
+              (and geprek, of course).
               <br />
               <br />
               Keep scrolling and you'll meet the unique mix of people in
@@ -192,6 +192,7 @@
     </div>
 
     <!--FOOTER-->
+    <!--CONTACT-->
     <section class="p-5" id="Contact">
       <div class="container">
         <div class="row g-4 align-item-center">
@@ -218,6 +219,19 @@
         </div>
       </div>
     </section>
+    
+    <!--BOX FOOTER-->
+    <footer class="p-5 bg-dark text-light text-center position-relative">
+    	<div class="container">
+    		<p class="lead">
+    			&copy; 2025 - CA'24 Computer Engineering
+    		</p>
+        <br>
+    		<h6>
+    			<i>Crafted in the quiet hours of the night by Atmin</i>
+        </h6>
+    	</div>
+    </footer>
 
     <!--SCRIPT BOOTSTRAP-->
     <script
