ganti font (maap ak labil)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
 
@@ -96,7 +96,7 @@
         <br />
         <br />
         <br />
-        <h5>designed by:</h5>
+        <h6>designed by:</h6>
       </div>
       <div class="container">
         <div class="row text-center d-block d-sm-flex">
