--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item text-white">
-              <a href="#" class="nav-link">Home</a>
+              <a href="#home" class="nav-link">Home</a>
             </li>
             <li class="nav-item text-white">
               <a href="#about" class="nav-link">About</a>
@@ -77,7 +77,7 @@
               <a href="#" class="nav-link">Classmates</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact</a>
+              <a href="#Contact" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
