--- a/index.html
+++ b/index.html
@@ -219,18 +219,16 @@
         </div>
       </div>
     </section>
-    
+
     <!--BOX FOOTER-->
     <footer class="p-5 bg-dark text-light text-center position-relative">
-    	<div class="container">
-    		<p class="lead">
-    			&copy; 2025 - CA'24 Computer Engineering
-    		</p>
-        <br>
-    		<h6>
-    			<i>Crafted in the quiet hours of the night by Atmin</i>
+      <div class="container">
+        <p class="lead">&copy; 2025 - CA'24 Computer Engineering</p>
+        <br />
+        <h6>
+          <i>Crafted in the quiet hours of the night by Atmin</i>
         </h6>
-    	</div>
+      </div>
     </footer>
 
     <!--SCRIPT BOOTSTRAP-->
