--- a/index.html
+++ b/index.html
@@ -88,14 +88,12 @@
     <!-- HOME -->
     <section class="pt-5 container" class="home header" id="home">
       <div class="home">
-        <h1>WELCOME TO CA'24 WEBSITE</h1>
-        <p class="lead container pt-3">
+        <h1 class="text-center">WELCOME TO CA'24 WEBSITE</h1>
+        <p class="lead container pt-3 text-center">
           Behold the creation of the great admins that will make you amazed.
           Just sit, relax, and enjoy the creation. Peace ✌️
         </p>
-        <br />
-        <br />
-        <br />
+
         <h6>designed by:</h6>
       </div>
       <div class="container">
