--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- LINK CUSTOM CSS -->
     <link rel="stylesheet" href="/style.css" />
@@ -89,10 +93,10 @@
     <section class="pt-5 container" class="home header" id="home">
       <div class="home">
         <h1>WELCOME TO CA'24 WEBSITE</h1>
-        <p class="lead container pt-3">
+        <h2 class="lead container pt-3">
           Behold the creation of the great admins that will make you amazed.
           Just sit, relax, and enjoy the creation. Peace ✌️
-        </p>
+        </h2>
         <br />
         <br />
         <br />
