Ganti Warna Link

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           Behold the creation of the great admins that will make you amazed.
           Just sit, relax, and enjoy the creation. Peace ✌️
         </p>
-        <br>
+        <br />
         <h6>designed by:</h6>
       </div>
       <div class="container">
@@ -206,6 +206,7 @@
                 <span class="fw-bold">Instagram</span>
                 <br />
                 <a
+                  class="linkContact"
                   href="https://www.instagram.com/oneca.studio?igsh=MTlxa3p4bGFwMmU5Ng=="
                   >@oneca.studio</a
                 >
@@ -214,7 +215,7 @@
                 <i class="bi bi-chat-right-text"></i>
                 <span class="fw-bold">Menfes</span>
                 <br />
-                <a href="menfes">Send us a Message</a>
+                <a class="linkContact" href="menfes">Send us a Message</a>
               </li>
             </ul>
           </div>
